[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/options_menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 0

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -20.0
margin_right = 48.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="Control/VBoxContainer"]
margin_right = 96.0
margin_bottom = 10.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Fullscreen: Off"

[node name="Audio" type="Button" parent="Control/VBoxContainer"]
margin_top = 14.0
margin_right = 96.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Audio: On"

[node name="Back" type="Button" parent="Control/VBoxContainer"]
margin_top = 28.0
margin_right = 96.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Back"
[connection signal="pressed" from="Control/VBoxContainer/Fullscreen" to="Control" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Audio" to="Control" method="_on_Audio_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Back" to="Control" method="_on_Back_pressed"]
